--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>org.wiperdog</groupId>
   <artifactId>wiperdog-xwiki-app</artifactId>
-  <version>0.1.0</version>
+  <version>0.2.0-SNAPSHOT</version>
   <packaging>xar</packaging>
   <name>XWiki Application - Wiperdog</name>
   <description>XWiki Application - Wiperdog</description>
