--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,18 @@
   <packaging>xar</packaging>
   <name>XWiki Application - Wiperdog</name>
   <description>XWiki Application - Wiperdog</description>
+  <dependencies>
+    <dependency>
+    	<groupId>org.mongodb</groupId>
+  		<artifactId>mongo-java-driver</artifactId>
+		<version>2.11.3</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.gmongo</groupId>
+   		<artifactId>gmongo</artifactId>
+		<version>1.2</version>
+    </dependency>
+  </dependencies>
   <build>
     <extensions>
       <extension>
@@ -29,7 +41,7 @@
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
           <execution>
-            <phase>package</phase>
+            <phase>install</phase>
             <id>rename</id>
             <configuration>
               <tasks>
