--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>0.1.0</version>
   </parent>
   <groupId>org.wiperdog</groupId>
-  <artifactId>wiperdog-xwiki-app</artifactId>
+  <artifactId>wiperdog-ui</artifactId>
   <version>0.2.0-SNAPSHOT</version>
   <packaging>xar</packaging>
   <name>XWiki Application - Wiperdog</name>
