--- a/pom.xml
+++ b/pom.xml
@@ -16,27 +16,29 @@
     	<groupId>org.mongodb</groupId>
   		<artifactId>mongo-java-driver</artifactId>
 		<version>2.11.3</version>
+		<scope>runtime</scope>
     </dependency>
     <dependency>
     	<groupId>com.gmongo</groupId>
    		<artifactId>gmongo</artifactId>
 		<version>1.2</version>
+		<scope>runtime</scope>
     </dependency>
   </dependencies>
   <build>
     <extensions>
       <extension>
-        <groupId>org.xwiki.platform.tools</groupId>
-        <artifactId>xwiki-xar-handlers</artifactId>
-        <version>1.9</version>
+        <groupId>org.xwiki.commons</groupId>
+        <artifactId>xwiki-commons-tool-xar-handlers</artifactId>
+        <version>5.3-milestone-1</version>
       </extension>
     </extensions>
     <plugins>
-      <plugin>
-        <groupId>org.xwiki.platform.tools</groupId>
-        <artifactId>xwiki-xar-plugin</artifactId>
-        <version>1.14</version>
-      </plugin>
+     <plugin>
+      <groupId>org.xwiki.commons</groupId>
+      <artifactId>xwiki-commons-tool-xar-plugin</artifactId>
+      <version>5.3-milestone-1</version>
+     </plugin>
       <!-- JENKINS_REMOVES_THIS_LINE
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
