--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>org.wiperdog</groupId>
   <artifactId>wiperdog-ui</artifactId>
-  <version>0.2.3-SNAPSHOT</version>
+  <version>0.2.3</version>
   <packaging>xar</packaging>
   <name>XWiki Application - Wiperdog</name>
   <description>XWiki Application - Wiperdog</description>
@@ -82,4 +82,8 @@
       <url>http://maven.xwiki.org/releases</url>
     </pluginRepository>
   </pluginRepositories>
+
+  <scm>
+    <tag>v0.2.3</tag>
+  </scm>
 </project>
